--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: edtech_flutter
 description: EdTech Science Equipment Scanner - Flutter implementation with AI-powered equipment recognition and bilingual support.
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -13,36 +13,37 @@ dependencies:
   # UI & Fonts
   google_fonts: ^6.1.0
   cupertino_icons: ^1.0.6
-  
+
   # Camera & Images
   camera: ^0.10.5+5
   image_picker: ^1.0.4
   image: ^4.1.3
-  
+
   # HTTP & APIs
   http: ^1.1.0
   dio: ^5.4.0
-  
+
   # AI Integration
   google_generative_ai: ^0.2.0
-  
+
   # Local Storage
   shared_preferences: ^2.2.2
   path_provider: ^2.1.1
-  
+
   # Google Services
   google_sign_in: ^6.1.5
   googleapis: ^11.4.0
   googleapis_auth: ^1.4.1
-  
+
   # State Management
   provider: ^6.1.1
-  
+
   # Utilities
   intl: ^0.18.1
   uuid: ^4.2.1
   flutter_markdown: ^0.6.18
   url_launcher: ^6.2.1
+  timeago: ^3.6.0
 
 dev_dependencies:
   flutter_test:
